Composer: Suggest `typisttech/wp-better-settings`

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     },
     "suggest": {
         "typisttech/imposter-plugin": "Wrap all composer vendor packages inside your own namespace, to prevent collisions when multiple plugins use this library",
+        "typisttech/wp-better-settings": "A simplified OOP implementation of the WP Settings API",
         "typisttech/wp-contained-hook": "Lazily instantiate objects from dependency injection container to WordPress hooks (actions and filters)",
         "typisttech/wp-tabbed-admin-pages": "Create WordPress admin pages with tabbed navigations, the OOP way"
     },
