Codeception Example: Change dbHost to IP

--- a/tests/wpunit.suite.example.yml
+++ b/tests/wpunit.suite.example.yml
@@ -3,7 +3,7 @@ modules:
         WPLoader:
             wpRootFolder: "/Users/me/Local Sites/wpadminnotices/app/public"
             dbName: "local"
-            dbHost: "wp-admin-tabs.local:4022"
+            dbHost: "192.168.93.100:4022"
             dbUser: "root"
             dbPassword: "root"
             domain: "wp-admin-tabs.local"
