--- a/composer.json
+++ b/composer.json
@@ -5,18 +5,18 @@
         "wordpress",
         "wp"
     ],
-    "homepage": "https://www.typist.tech/projects/wp-admin-tabs",
-    "license": "GPL-2.0+",
+    "homepage": "https://typist.tech/projects/wp-admin-tabs",
+    "license": "GPL-2.0-or-later",
     "authors": [
         {
             "name": "Typist Tech",
             "email": "wp-admin-tabs@typist.tech",
-            "homepage": "https://www.typist.tech/"
+            "homepage": "https://typist.tech/"
         },
         {
             "name": "Tang Rufus",
             "email": "tangrufus@gmail.com",
-            "homepage": "https://www.typist.tech/",
+            "homepage": "https://typist.tech/",
             "role": "Developer"
         }
     ],
@@ -48,7 +48,6 @@
     },
     "scripts": {
         "check-style": "phpcs --standard=ruleset.xml --colors -p -s .",
-        "fix-style": "phpcbf --standard=ruleset.xml -p --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 .",
         "install-dev-extra": [
             "phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs"
         ],
