--- a/.travis.yml
+++ b/.travis.yml
@@ -27,15 +27,17 @@ php:
 env:
   global:
     - COMPOSER_NO_INTERACTION=1
-    - TMPDIR=/tmp/
   matrix:
     - WP_VERSION=nightly
-    - WP_VERSION=latest
-    - WP_VERSION=4.9.4
+    - WP_VERSION=latest WITH_COVERAGE=true
+    - WP_VERSION=4.9.5
 
 matrix:
   include:
-    - php: '7.1'
+    - php: nightly
+      env: WP_VERSION=latest
+  exclude:
+    - php: nightly
       env: WP_VERSION=latest WITH_COVERAGE=true
   allow_failures:
     - php: nightly
@@ -44,7 +46,6 @@ matrix:
 
 before_install:
   - $WITH_COVERAGE || phpenv config-rm xdebug.ini || true
-  - mkdir -p $TMPDIR/AspectMock/wp-admin-tabs
 
   # Install helper scripts
   - travis_retry composer global require --prefer-dist --no-suggest typisttech/travis-nginx-wordpress
